<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/marginBotton"
    android:paddingLeft="@dimen/marginLeft"
    android:paddingRight="@dimen/marginRight"
    android:paddingTop="@dimen/marginTop"
    tools:context="br.com.edecio.lojadecalcadosavenida.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisa_de_mercado_loja_avenida"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcas_de_sua_prefer_ncia" />

    <CheckBox
        android:id="@+id/chkOlimpikus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olimpikus" />

    <CheckBox
        android:id="@+id/chkAdidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adidas" />

    <CheckBox
        android:id="@+id/chkNike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nike" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"/>

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:layout_weight="2"/>

    </LinearLayout>

</LinearLayout>
